# canon_pass

./: .gitignore  Makefile  README.md
pass/: CMakeLists.txt  canonicalization.cpp  canonicalization.hpp  canonicalization_test.cpp  test_data.hpp
pass/testdata/: test_ir1.ll  test_ir2.ll  test_ir3.ll  test_ir4.ll  test_ir5.ll  test_ir6.ll  test_ir7.ll  test_ir8.ll  test_program.c
scripts/: local_llvm_8.sh
tests/: global.ir  global_struct.cpp
